@@ -375,6 +375,7 @@ Angel Carpintero
      ( no needed to deploy BSD port here ) directories.
    * Improve debian package, create user/group motion and added --chuid motion to init script.
    * Added help in http control http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=396595.
+   * Fixed http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x10x23x093651
  
 Jared D
    * Change bayer2rgb24() to fix a problem with sn9c102 driver
